removed unnecessary code and fixed table width to remove horizontal scrolling

--- a/app/assets/stylesheets/schedule.css
+++ b/app/assets/stylesheets/schedule.css
@@ -19,29 +19,10 @@ padding: 5px;
 /*padding-top: 80px;*/
 /*width: 1000px;*/
 height: 300px;
-width: 1000px;
+width: 1100px;
 overflow: scroll;
 }
 
-/* Scrollbar styles */
-/*::-webkit-scrollbar {
-width: 15px;
-height: 15px;
-}
-
-::-webkit-scrollbar-track {
-background: #BF725B;
-border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-border-radius: 10px;
-background: #03033F;  
-}
-
-::-webkit-scrollbar-thumb:hover {
-background: #DAD4B9;  
-}*/
 
 /* TABLE STYLES */
 head, body {
@@ -56,19 +37,16 @@ table {
 	/*margin: 20px auto;*/
 	/*padding: 20px;*/
 /*	border-radius: 20px 0;
-}*//* don't use border-radius... will put table head and table body side-by-side*/
+
+}*/
+
+/* don't use border-radius... will put table head and table body side-by-side*/
 
 tr {
 	height: 80px;
 	/*border-bottom: 1px solid #03033F;*/
 }
 
-/*th:only-child {
-	color: #0289d7;
-	font-size: 1.5em;
-	padding: 5px 0;
-}
-*/
 
 
 thead {
